fix: input text alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -252,7 +252,7 @@ button + button {
   padding-inline-end : 0;
   padding-block-start : 5rem;
   padding-block-end : 5rem;
-  /* text-align: center; */
+  text-align: center;
 }
 
 #generatebuttondiv {
